--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
        "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,6 +37,7 @@
     "from itertools import groupby\n",
     "import spacy\n",
     "nlp = spacy.load(\"it_core_news_sm\")\n",
+    "import pandas as pd\n",
     "\n",
     "# Download necessary NLTK data\n",
     "nltk.download('punkt')\n",
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,8 +125,8 @@
     "    return sentence\n",
     "\n",
     "def preprocess_tweet(tweet):\n",
-    "    # Remove newlines and carriage returns\n",
-    "    tweet = tweet.replace('\\n', ' ').replace('\\r', ' ').lower()\n",
+    "    # Remove newlines and carriage returns and lowercase words\n",
+    "    tweet = tweet.replace('\\n', '').replace('\\r', '').lower()\n",
     "\n",
     "    # Remove incorrect bad word \n",
     "    tweet = clean_disguised_bad_words(tweet)\n",
@@ -150,11 +151,11 @@
     "\n",
     "    # Tokenization\n",
     "    tokens = nltk.word_tokenize(tweet)\n",
-    "\n",
+    "    \n",
     "    # Remove stop words (Italian)\n",
     "    stop_words = set(stopwords.words('italian'))\n",
     "    filtered_tokens = \" \".join(word for word in tokens if word not in stop_words)\n",
-    "\n",
+    "    \n",
     "    \"\"\" # Stemming using Italian stemmer\n",
     "    stemmer = SnowballStemmer('italian')\n",
     "    stemmed_tokens = [stemmer.stem(word) for word in filtered_tokens] \"\"\"\n",
@@ -164,34 +165,78 @@
     "    lemmatize_tokens = [token.lemma_ if token.lemma_ != '-PRON-' else token.text for token in doc]    \n",
     "\n",
     "    # Remove special characters and numbers, preserve placeholders\n",
-    "    processed_tweet = \" \".join(re.sub(r'[^a-zA-Z\\<\\>]', ' ', token) for token in lemmatize_tokens)\n",
+    "    processed_tweet = \" \".join(re.sub(r'[^a-zA-Z\\<\\>]', '', token) for token in lemmatize_tokens)\n",
     "\n",
-    "    return processed_tweet"
+    "    # Use re.sub() to replace spaces within \"< >\"\n",
+    "    result = re.sub(r\"<\\s*(\\w+)\\s*>\", r\"<\\1>\", processed_tweet)\n",
+    "\n",
+    "    return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " ma davvero 📺 #salvinimerda49milioni  alcool c'è che l'ha ciaaaooo c@lo ca**o m*rd@ una raccolta firme per #nocoprifuocodeimieicoglioni riuscirà a far cambiare idea al #governodeipeggiori? povero illuso del cazzo \n",
-      "Processed Tweet: davvero   televisore   < HASHTAG > alcool essere lo avere ciao culo cazzo merda raccoltare firma < HASHTAG > riuscire fare cambiare idea < HASHTAG >   povero illuso cazzo\n"
+      " ma davvero 📺 #salvinimerda49milioni  alcool c'è che l'ha ciaaaooo c@lo ca**o m*rd@ una   raccolta firme per #nocoprifuocodeimieicoglioni riuscirà a far cambiare idea al #governodeipeggiori?  povero illuso del cazzo @12341234 \n",
+      "Processed Tweet: davvero  televisore  <HASHTAG> alcool essere lo avere ciao culo cazzo merda raccoltare firma <HASHTAG> riuscire fare cambiare idea <HASHTAG>  povero illuso cazzo <MENTION>\n"
      ]
     }
    ],
    "source": [
     "\n",
     "# Example Italian tweet with placeholders\n",
-    "tweet = \"Ma davvero 📺 #SalviniMerda49Milioni  alcool c'è che l'ha ciaaaooo c@lo ca**o m*rd@ una raccolta firme per #NoCoprifuocoDeiMieiCoglioni riuscirà a far cambiare idea al #governodeipeggiori? Povero illuso del cazzo\"\n",
+    "tweet = \"\"\"Ma davvero 📺 #SalviniMerda49Milioni\n",
+    "  alcool c'è che l'ha ciaaaooo c@lo ca**o m*rd@ una \n",
+    "  raccolta firme per #NoCoprifuocoDeiMieiCoglioni riuscirà a far cambiare idea al #governodeipeggiori?\n",
+    "  Povero illuso del cazzo @12341234\"\"\"\n",
     "\n",
     "# Preprocess the tweet\n",
     "processed_tweet = preprocess_tweet(tweet)\n",
     "\n",
     "print(\"Processed Tweet:\", processed_tweet)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Specify the path to your CSV file\n",
+    "csv_file = 'dataset/development/training_textual.csv'\n",
+    "dev_data = pd.read_csv(csv_file)\n",
+    "new_dev_data = dev_data.copy()\n",
+    "new_dev_data['anonymized_text'] = new_dev_data['anonymized_text'].apply(preprocess_tweet)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Piantatela brutti imbecilli razzisti.\n",
+      "Il vostro, e sottolineo vostro, ministro non ha difeso i confini italiani ma ha probabilmente violato gravemente il codice penale. \n",
+      "\n",
+      "#salvinilabestia #salvinidimettiti\n",
+      "#facciamorete #Diciotti #Senato\n",
+      "----------------\n",
+      "piantatela brutto imbecillo razzistiil  sottolineare  ministro difeso confine italiano probabilmente violare gravemente codice penale  <HASHTAG> <HASHTAG> <HASHTAG> <HASHTAG> <HASHTAG>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dev_data['anonymized_text'][100])\n",
+    "print('----------------')\n",
+    "print(new_dev_data['anonymized_text'][100])"
    ]
   }
  ],
